<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danielakinola.loljournal.MainActivity">

    <TextView
        android:id="@+id/activitytitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="114dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activitytitle">

        <Button
            android:id="@+id/btn_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top" />

        <Button
            android:id="@+id/btn_jungle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jungle" />

        <Button
            android:id="@+id/btn_mid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mid" />

        <Button
            android:id="@+id/btn_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottom" />

        <Button
            android:id="@+id/btn_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support" />

        <Button
            android:id="@+id/btn_champ_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ChampListActivity" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
